--- a/Vehicles04.API/Views/Home/Index.cshtml
+++ b/Vehicles04.API/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center color-fondo">
     <h1 class="display-4 color-flogo">Vehicles</h1>
-    <img src="~/Image/LogoCar.png" />
+    <img src="~/images/LogoCar.png" />
 </div>
